--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,6 @@ repository = "https://gitlab.com/nick70/rust-ip_api"
 
 [dependencies]
 reqwest = "~0.9.21"
-
-[dependencies.serde]
-version = "^1.0.101"
-
-[dependencies.serde_derive]
-version = "^1.0.101"
-
-[dependencies.serde_json]
-version = "^1.0.40"
+serde = "^1.0.101"
+serde_derive = "^1.0.101"
+serde_json = "^1.0.40"
