--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@
 
 [package]
 name = "ip_api"
-version = "0.1.3"
+version = "0.2.0"
 authors = ["Nicholas Farshidmehr <nick385827184@gmail.com>"]
 description = "Library to get information about IP addresses or domains using ip-api.com"
 documentation = "https://docs.rs/ip_api"
@@ -20,9 +20,10 @@ readme = "README.md"
 keywords = ["ip", "geoip", "geolocation", "domain"]
 license = "MIT"
 repository = "https://gitlab.com/nick70/rust-ip_api"
+edition = "2018"
 
 [dependencies]
-reqwest = "~0.9.21"
-serde = "^1.0.101"
-serde_derive = "^1.0.101"
-serde_json = "^1.0.40"
+reqwest = { version = "0.10.1", features = ["json"] }
+serde = "1.0.104"
+serde_derive = "1.0.104"
+serde_json = "1.0.44"
