--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ repository = "https://gitlab.com/nick70/rust-ip_api"
 edition = "2018"
 
 [dependencies]
-reqwest = { version = "0.10.1", features = ["json"] }
+reqwest = { version = "0.10.1", features = ["json", "blocking"] }
 serde = "1.0.104"
 serde_derive = "1.0.104"
 serde_json = "1.0.44"
